	Fixed bug where focus of the editor would get on control contents on IE lost due to a bug in the ColorSplitButton control.
	Fixed bug where contextmenu wasn't disabled on noneditable elements.
	Fixed bug where getStyle function would trigger error when called on element without style property.
	Fixed bug where editor fail to load if Javascript Compressor was used.
	Fixed bug in xhtmlxtras plugin where it wasn't possible to remove some attributes in the attributes dialog.
Version 3.4.1 (2011-03-24)
	Added significantly improved list handling via the new 'lists' plugin.
	Added 'autolink' plugin to enable automatically linking URLs. Similar to the behavior IE has by default.
	Added 'theme_advanced_show_current_color' setting to enable the forecolor and backcolor buttons to continuously show the current text color.
	Added 'contextmenu_never_use_native' setting to disable the ctrl-right-click showing the native browser context menu behaviour.
	Added 'paste_enable_default_filters' setting to enable the default paste filters to be disabled.
	Fixed bug where selection locations on undo/redo didn't work correctly on specific contents.
	Fixed bug where an exception would be trown on IE when loading TinyMCE inside an iframe.
	Fixed bug where some ascii numeric entities wasn't properly decoded.
	Fixed bug where some non western language codes wasn't properly decoded/encoded.
	Fixed bug where undo levels wasn't created when deleting contents on IE.
	Fixed bug where the initial undo levels bookmark wasn't updated correctly.
	Fixed bug where search/replace wouldn't be scoped to editor instances on IE8.
	Fixed bug where IE9 would produce two br elements after block elements when pasting.
	Fixed bug where IE would place the caret at an incorrect position after a paste operation.
	Fixed bug where a paste operation using the keyboard would add an extra undo level.
	Fixed bug where some attributes/elements wasn't correctly filtered when invalid contents was inserted.